k0s/manifests/victoria-metrics/kustomize/base/operator/deployment-victoria-metrics-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoria-metrics-operator
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.73.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: victoria-metrics
        app.kubernetes.io/name: victoria-metrics-operator
    spec:
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: victoria-metrics-operator
      containers:
      - name: operator
        image: victoriametrics/operator:v0.73.1
        imagePullPolicy: IfNotPresent
        args:
        - --zap-log-level=info
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --webhook.enable=true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: probe
          containerPort: 8081
          protocol: TCP
        - name: webhook
          containerPort: 9443
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: probe
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 15
          tcpSocket:
            port: probe
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: victoria-metrics-operator-validation
