k0s/manifests/victoria-metrics/kustomize/base/operator/service-victoria-metrics-operator.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.73.1
  name: victoria-metrics-operator
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: webhook
    port: 9443
    targetPort: webhook
  selector:
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-operator
