k0s/manifests/victoria-metrics/kustomize/base/operator/validatingwebhookconfiguration-victoria-metrics-operator-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: victoria-metrics-operator-admission
  labels:
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-operator
    app.kubernetes.io/version: v0.73.1
webhooks:
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vlagent
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vlagents.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlagents
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vlcluster
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vlclusters.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlclusters
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vlogs
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vlogs.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlogs
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vlsingle
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vlsingles.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlsingles
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmagent
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmagents.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmagents
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalertmanagerconfig
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmalertmanagerconfigs.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalertmanagerconfigs
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalertmanager
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmalertmanagers.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalertmanagers
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmalert
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmalerts.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmalerts
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vmanomaly
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmanomalies.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmanomalies
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vmanomalyconfig
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmanomalyconfigs.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmanomalyconfigs
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmauth
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmauths.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmauths
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmcluster
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmclusters.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmclusters
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1alpha1-vmdistributed
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmdistributed.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmdistributed
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmnodescrape
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmnodescrapes.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmnodescrapes
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmpodscrape
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmpodscrapes.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmpodscrapes
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmprobe
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmprobes.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmprobes
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmrule
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmrules.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmrules
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmscrapeconfig
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmscrapeconfigs.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmscrapeconfigs
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmservicescrape
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmservicescrapes.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmservicescrapes
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmsingle
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmsingles.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmsingles
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmstaticscrape
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmstaticscrapes.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmstaticscrapes
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1beta1-vmuser
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vmusers.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vmusers
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vtcluster
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vtclusters.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vtclusters
- clientConfig:
    service:
      namespace: monitoring
      name: victoria-metrics-operator
      path: /validate-operator-victoriametrics-com-v1-vtsingle
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lSQVBYUGNJeUpYc3dDdVpiTVRXU0prSjB3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT2RtMHRiM0JsY21GMGIzSXRZMkV3SGhjTk1qWXdOekU0TVRVMU9UQTBXaGNOTXpZdwpOekUxTVRVMU9UQTBXakFaTVJjd0ZRWURWUVFERXc1MmJTMXZjR1Z5WVhSdmNpMWpZVENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkp4TXl5azBrc1N5eThFQ0lpdlJuMnBjQmpZUzJSQTFGZ1UKQ0gxSklZY2lzNEtHZVFPdmcraE1YOWtyaTBPeXZSOGdYQTFUME9naW01b1Z6SGYrYVA2SkU0MjlFWUMxbU4xdgpSL1RNUk94eUpIa3 [...]
  failurePolicy: Ignore
  name: vtsingles.operator.victoriametrics.com
  admissionReviewVersions:
  - v1
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - victoria-metrics-operator
  rules:
  - apiGroups:
    - operator.victoriametrics.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vtsingles
